<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nsa.hydratr.controller.MainMenuActivity"
    tools:showIn="@layout/activity_main_menu">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="38dp"
            android:text="@string/hydratr"
            android:textSize="44sp"
            tools:layout_editor_absoluteX="163dp"
            tools:layout_editor_absoluteY="64dp" />

        <Button
            android:id="@+id/buttonNavForm"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:layout_marginTop="69dp"
            android:text="@string/enter_water_consumption"
            tools:layout_editor_absoluteX="49dp"
            tools:layout_editor_absoluteY="144dp"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/buttonViewResults"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="153dp"
            android:text="@string/view_water_consumption"
            tools:layout_editor_absoluteX="47dp"
            tools:layout_editor_absoluteY="282dp"
            android:textSize="18sp"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
